correction title on hero section mobile

--- a/components/about/hero/Hero.module.scss
+++ b/components/about/hero/Hero.module.scss
@@ -38,13 +38,14 @@
     }
 
     @media screen and(max-width: 576px) {
-        @apply top-[-40vw];
+        @apply top-[-37vw];
         line-height: 180%;
         font-size: calc(18px + (27 - 18)*(100vw - 320px)/(576 - 320));
     }
 
     @media (max-height: 740px) and (max-width: 576px) {
         @apply top-[-35vw];
+        line-height: 140%;
     }
 
     span {
